Changed scope from `@gsu` to `@gastate`

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@gsu/mui-react-template",
+  "name": "@gastate/mui-react-template",
   "author": "Melody Kimball",
   "private": false,
   "version": "0.0.1",
