--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@gastate/mui-react-template",
+  "name": "@melodykimball/gsu-mui-react-template",
   "author": "Melody Kimball",
   "private": false,
-  "version": "0.0.3",
+  "version": "1.0.0",
   "type": "module",
   "license": "MIT",
   "main": "./dist/index.js",
@@ -14,9 +14,6 @@
     "type": "git",
     "url": "https://github.com/melodykimball/gsu-mui-react-template"
   },
-  "sideEffects": [
-    "**/*.css"
-  ],
   "exports": {
     ".": "./dist/index.js",
     "./components": "./dist/components/index.js",
@@ -36,7 +33,7 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
-  "peerDependencies": {
+  "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fontsource/roboto": "^5.2.5",
@@ -44,9 +41,11 @@
     "@mui/material": "^6.4.7",
     "@mui/system": "^6.4.7",
     "@tanstack/react-query": "^5.69.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
     "react-router": "^7.4.0"
+  },
+  "peerDependencies": {
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
