--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@melodykimball/gsu-mui-react-template",
   "author": "Melody Kimball",
   "private": false,
-  "version": "1.0.0",
+  "version": "1.0.1",
   "type": "module",
   "license": "MIT",
   "main": "./dist/index.js",
@@ -33,7 +33,7 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
-  "dependencies": {
+  "peerDependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fontsource/roboto": "^5.2.5",
@@ -41,11 +41,9 @@
     "@mui/material": "^6.4.7",
     "@mui/system": "^6.4.7",
     "@tanstack/react-query": "^5.69.0",
-    "react-router": "^7.4.0"
-  },
-  "peerDependencies": {
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router": "^7.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
