--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@melodykimball/gsu-mui-react-template",
   "author": "Melody Kimball",
   "private": false,
-  "version": "1.0.1",
+  "version": "1.0.2",
   "type": "module",
   "license": "MIT",
   "main": "./dist/index.js",
@@ -16,11 +16,20 @@
   },
   "exports": {
     ".": "./dist/index.js",
-    "./components": "./dist/components/index.js",
-    "./contexts": "./dist/contexts/index.js",
-    "./hooks": "./dist/hooks/index.js",
-    "./pages": "./dist/pages/index.js",
-    "./providers": "./dist/providers/index.js",
+    "./AppLayout": "./dist/components/AppLayout/index.js",
+    "./Button": "./dist/components/Button.js",
+    "./ContactHelpDesk": "./dist/components/ContactHelpDesk.js",
+    "./LoadingSpinner": "./dist/components/LoadingSpinner/index.js",
+    "./SelectFormControl": "./dist/components/SelectFormControl/index.js",
+    "./useAuthToken": "./dist/hooks/useAuthToken.js",
+    "./useStorage": "./dist/hooks/useStorage.js",
+    "./AuthPage": "./dist/components/AppLayout/index.js",
+    "./ErrorPage": "./dist/pages/ErrorPage.js",
+    "./LoginPage": "./dist/pages/LoginPage.js",
+    "./NotFoundPage": "./dist/pages/NotFoundPage.js",
+    "./AuthTokenProvider": "./dist/providers/AuthTokenProvider.js",
+    "./QueryClientProvider": "./dist/providers/QueryClientProvider.js",
+    "./RouterProvider": "./dist/providers/RouterProvider.js",
     "./types": "./dist/index.d.ts",
     "./package.json": "./package.json"
   },
