--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "./ContactHelpDesk": "./dist/components/ContactHelpDesk.js",
     "./LoadingSpinner": "./dist/components/LoadingSpinner.js",
     "./SelectFormControl": "./dist/components/SelectFormControl.js",
-    "./useAuthToken": "./dist/hooks/useAuthToken.js",
-    "./useStorage": "./dist/hooks/useStorage.js",
+    "./AuthTokenContext": "./dist/contexts/AuthTokenContext.ts",
+    "./useAuthToken": "./dist/hooks/useAuthToken/index.js",
+    "./useStorage": "./dist/hooks/useStorage/index.js",
     "./AuthPage": "./dist/pages/AuthPage.js",
     "./ErrorPage": "./dist/pages/ErrorPage.js",
     "./LoginPage": "./dist/pages/LoginPage.js",
