--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@melodykimball/gsu-mui-react-template",
   "author": "Melody Kimball",
   "private": false,
-  "version": "1.0.3",
+  "version": "1.0.4",
   "type": "module",
   "license": "MIT",
   "main": "./dist/index.js",
@@ -20,12 +20,17 @@
   "exports": {
     ".": "./dist/index.js",
     "./AppLayout": "./dist/components/AppLayout/index.js",
+    "./Accordion": "./dist/components/Accordion.js",
     "./Button": "./dist/components/Button.js",
     "./ContactHelpDesk": "./dist/components/ContactHelpDesk.js",
+    "./CookieConsent": "./dist/components/CookieConsent.js",
+    "./ExternalLink": "./dist/components/ExternalLink.js",
+    "./HeaderInfo": "./dist/components/HeaderInfo.js",
     "./LoadingSpinner": "./dist/components/LoadingSpinner.js",
     "./SelectFormControl": "./dist/components/SelectFormControl.js",
     "./AuthTokenContext": "./dist/contexts/AuthTokenContext.ts",
     "./useAuthToken": "./dist/hooks/useAuthToken/index.js",
+    "./useSelectValues": "./dist/hooks/useSelectValues/index.js",
     "./useStorage": "./dist/hooks/useStorage/index.js",
     "./AuthPage": "./dist/pages/AuthPage.js",
     "./ErrorPage": "./dist/pages/ErrorPage.js",
@@ -55,6 +60,7 @@
     "@mui/system": "^6.4.7",
     "@tanstack/react-query": "^5.69.0",
     "react": "^19.0.0",
+    "react-cookie-consent": "^9.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.4.0"
   },
